--- a/src/globalvars.scss
+++ b/src/globalvars.scss
@@ -1,10 +1,6 @@
-
 $color1: #27ae60;
-$color2: #417D95;
+$color2: #417d95;
 $color3: #eff0f1;
 $color4: #fcfbfc;
 $color5: #e9f0f4;
 $extra: #036564;
-
-
-
