--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,17 +1,14 @@
 // @import url('https://fonts.googleapis.com/css?family=Raleway');
 // @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 // @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
-@import '../globalvars.scss';
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Ubuntu');
-
-
+@import "../globalvars.scss";
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Ubuntu");
 
 // $color1: #E1331B;
 // $color2: #F85E28;
 // $color3: #CCFCEE;
 // $color4: #7BD1B8;
 // $color5: #3E6C61;
-
 
 // $color1: #234A56;
 // $color2: #417D95;
@@ -20,16 +17,12 @@
 // $color5: #DDE7DC;
 // $extra: #F34C56;
 
-
-
 // $color1: #031634;
 // $color2: #417D95;
 // $color3: #033649;
 // $color4: #036564;
 // $color5: #DDE7DC;
 // $extra: #036564;
-
-
 
 // $color1: #27ae60;
 // $color2: #417D95;
@@ -38,111 +31,109 @@
 // $color5: #e9f0f4;
 // $extra: #036564;
 
-
-
-
-
-
-
 html,
 body,
-#___gatsby{
-	min-height: 100vh;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-    padding: 0;
-	// font-family:  'Raleway', sans-serif;
-	// font-family: 'Open Sans', sans-serif;
-	// font-family: 'Roboto Condensed', sans-serif;
+#___gatsby {
+  min-height: 100vh;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  // font-family:  'Raleway', sans-serif;
+  // font-family: 'Open Sans', sans-serif;
+  // font-family: 'Roboto Condensed', sans-serif;
 
-	// font-family: 'Roboto Condensed', sans-serif;
-	// font-family: 'Source Sans Pro', sans-serif;
-	// font-family: 'Ubuntu', sans-serif;
-	// font-family: 'Josefin Sans', sans-serif;
-	font-family: 'Josefin Sans', monospace;
-	// font-family: 'Dosis', sans-serif;
-	// font-family: 'Arvo', serif;
-	// font-family: 'Rubik', sans-serif;
+  // font-family: 'Roboto Condensed', sans-serif;
+  // font-family: 'Source Sans Pro', sans-serif;
+  // font-family: 'Ubuntu', sans-serif;
+  // font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", monospace;
+  // font-family: 'Dosis', sans-serif;
+  // font-family: 'Arvo', serif;
+  // font-family: 'Rubik', sans-serif;
 
-
-    // font-family:  'Lucida Sans Unicode', 'Lucida Grande', sans-serif
+  // font-family:  'Lucida Sans Unicode', 'Lucida Grande', sans-serif
 }
 * {
-	box-sizing: border-box;
-	color: black;
+  box-sizing: border-box;
+  color: black;
 }
-
-
-
 
 @media screen and (max-width: 600px) {
-	.children-wrapper{
-		width: 100%;
-		height: 100%;
-		z-index: 0;
-		display: flex;
-		align-items: center;
-		flex-direction: column;
-		padding: 1rem;
-	}
+  .children-wrapper {
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 1rem;
+  }
 }
-
 
 @media screen and (min-width: 600px) {
-	.children-wrapper{
-		width: 100%;
-		height: 100%;
-		z-index: 0;
-		display: flex;
-		align-items: center;
-		flex-direction: column;
-		padding: 2rem;
-	}
+  .children-wrapper {
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 2rem;
+  }
 }
 
-@mixin arrows($up,$down){
-	background:
-	linear-gradient(45deg, $down 22.5px, transparent 22.5px)32px 32px,
-	linear-gradient(45deg, $down 22.5px, transparent 22.5px,transparent 45.5px, $up 45.5px, $up 67.5px, transparent 67.5px),
-	linear-gradient(-45deg, $down 11.5px, transparent 11.5px, transparent 34px,$down 34px,$down 56.5px,transparent 56.5px,transparent 79px,$down 79px);
-	background-color:$up;
-	background-size: 64px 64px;
+@mixin arrows($up, $down) {
+  background: linear-gradient(45deg, $down 22.5px, transparent 22.5px) 32px 32px,
+    linear-gradient(
+      45deg,
+      $down 22.5px,
+      transparent 22.5px,
+      transparent 45.5px,
+      $up 45.5px,
+      $up 67.5px,
+      transparent 67.5px
+    ),
+    linear-gradient(
+      -45deg,
+      $down 11.5px,
+      transparent 11.5px,
+      transparent 34px,
+      $down 34px,
+      $down 56.5px,
+      transparent 56.5px,
+      transparent 79px,
+      $down 79px
+    );
+  background-color: $up;
+  background-size: 64px 64px;
 }
 
-
-
-.children-card{
-	background-color: white;
-	width: 100%;
-	max-width: 1000px;
-	height: 100%;
-	z-index: 0;
-	border: 1px solid black;
-	padding: 1.5rem;
-	box-shadow: 5px 5px black;
-
+.children-card {
+  background-color: white;
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
+  z-index: 0;
+  border: 1px solid black;
+  padding: 1.5rem;
+  box-shadow: 5px 5px black;
 }
-
-
-
 
 .background,
-body{
-	// background-color: grey;
-	position: absolute;
-	z-index: -2;
-	width: 100%;
-	height: 100%;
-	@include arrows($color3,$color4)
+body {
+  // background-color: grey;
+  position: absolute;
+  z-index: -2;
+  width: 100%;
+  height: 100%;
+  @include arrows($color3, $color4);
 }
 
-.background-top{
-	background-color: $color1;
-	position: absolute;
-	width: 100%;
-	height: 250px;
-	z-index: -1;
-
-
+.background-top {
+  background-color: $color1;
+  position: absolute;
+  width: 100%;
+  height: 250px;
+  z-index: -1;
 }
