--- a/src/pages/404.scss
+++ b/src/pages/404.scss
@@ -1,15 +1,15 @@
-@import '../globalvars.scss';
+@import "../globalvars.scss";
 
 .number404 {
-    font-size: 5rem;
-    // text-align: center;
-    // margin: 40px;
-    color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // background: -webkit-linear-gradient(top, #028F76, #1C2130);
-    // background: linear-gradient(top, #1C2130, #028F76);
-    // -webkit-background-clip: text;
-    // -webkit-text-fill-color: transparent;
+  font-size: 5rem;
+  // text-align: center;
+  // margin: 40px;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background: -webkit-linear-gradient(top, #028F76, #1C2130);
+  // background: linear-gradient(top, #1C2130, #028F76);
+  // -webkit-background-clip: text;
+  // -webkit-text-fill-color: transparent;
 }
