--- a/src/pages/blog.scss
+++ b/src/pages/blog.scss
@@ -1,122 +1,115 @@
-@import '../globalvars.scss';
+@import "../globalvars.scss";
 
-
-    .category{
-        text-transform: capitalize;
-    }
-
-    .itens {
-        display: grid;
-        grid-template-columns: repeat( 3, 33.34% ) ;
-        @media screen and (max-width: 600px) {
-            grid-template-columns: repeat( 1, 100% ) ;
-        }
-        grid-gap: 5px;
-
-        .carditem{
-            width: 100%;
-            height: 4rem;
-            padding: 1rem 0 0 0;
-            border: solid $color1;
-
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            background-color: white;
-            
-            .carditemtitle{
-                padding: 3px;
-                color: $color1;
-                font-weight: bold;
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                text-transform: capitalize;
-            }
-
-            .cardDate{
-                display: flex;
-                align-items: center;
-                padding: 3px;
-                margin :0;
-                font-weight: bold;
-                
-                // height: 100%;
-                font-size: 0.75rem;
-
-                background-color: $color1;
-                color: whitesmoke;
-            }
-            &:hover {
-                background-color: $color1;
-                .carditemtitle{
-                    color: whitesmoke;
-                }
-                .cardDate{
-                    background-color: white;
-                    color: $color1;
-                }
-            }
-
-        }
-    }
-
-
-
-a{
-    text-decoration: none;
+.category {
+  text-transform: capitalize;
 }
 
-.post-card{
+.itens {
+  display: grid;
+  grid-template-columns: repeat(3, 33.34%);
+  @media screen and (max-width: 600px) {
+    grid-template-columns: repeat(1, 100%);
+  }
+  grid-gap: 5px;
+
+  .carditem {
+    width: 100%;
+    height: 4rem;
+    padding: 1rem 0 0 0;
+    border: solid $color1;
+
     display: flex;
     flex-direction: column;
-    align-items: center;
-    height: 100%;
-    padding: 1rem;
-    border-left: 5px solid grey;
+    justify-content: space-between;
+    background-color: white;
+
+    .carditemtitle {
+      padding: 3px;
+      color: $color1;
+      font-weight: bold;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      text-transform: capitalize;
+    }
+
+    .cardDate {
+      display: flex;
+      align-items: center;
+      padding: 3px;
+      margin: 0;
+      font-weight: bold;
+
+      // height: 100%;
+      font-size: 0.75rem;
+
+      background-color: $color1;
+      color: whitesmoke;
+    }
+    &:hover {
+      background-color: $color1;
+      .carditemtitle {
+        color: whitesmoke;
+      }
+      .cardDate {
+        background-color: white;
+        color: $color1;
+      }
+    }
+  }
+}
+
+a {
+  text-decoration: none;
+}
+
+.post-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  padding: 1rem;
+  border-left: 5px solid grey;
+  text-decoration: none;
+
+  -webkit-box-shadow: 10px 10px 20px -15px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 10px 10px 20px -15px rgba(0, 0, 0, 1);
+  box-shadow: 10px 10px 20px -15px rgba(0, 0, 0, 1);
+
+  &:hover {
+    border-left: 5px solid $color1;
+    .post-card-title {
+      color: $color1;
+    }
+    .post-card-date {
+      color: $color1;
+    }
+  }
+
+  .post-card-title {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     text-decoration: none;
-    
-
-    -webkit-box-shadow: 10px 10px 20px -15px rgba(0,0,0,1);
-    -moz-box-shadow: 10px 10px 20px -15px rgba(0,0,0,1);
-    box-shadow: 10px 10px 20px -15px rgba(0,0,0,1);
-
-    &:hover{
-        border-left: 5px solid $color1;
-        .post-card-title{
-            color: $color1;
-        }
-        .post-card-date{
-            color: $color1;
-        }
-    }
-
-    .post-card-title{
-        width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        text-decoration: none;
-        text-transform: capitalize;
-    }
-    .post-card-date{
-        width: 100%;
-        text-align: right;
-        text-decoration: none;
-    }
+    text-transform: capitalize;
+  }
+  .post-card-date {
+    width: 100%;
+    text-align: right;
+    text-decoration: none;
+  }
 }
 
-.alert{
-    background-color: orange;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    padding: 2.5px 10px;
+.alert {
+  background-color: orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  padding: 2.5px 10px;
 
-
-    .alert-text{
-        margin-left: 10px;
-    }
+  .alert-text {
+    margin-left: 10px;
+  }
 }
-
