--- a/src/templates/index.scss
+++ b/src/templates/index.scss
@@ -1,83 +1,73 @@
-@import '../globalvars.scss';
+@import "../globalvars.scss";
 
-
-
-.title{
-    text-transform: capitalize;
-    margin: 0;
-    word-break: break-word;
+.title {
+  text-transform: capitalize;
+  margin: 0;
+  word-break: break-word;
 }
 
-.subtitle{
+.subtitle {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-transform: uppercase;
+  margin-bottom: 3rem;
+  margin-top: 1rem;
+
+  border-top: solid black;
+  border-bottom: solid black;
+
+  h5 {
+    margin: 0.5rem 0;
+  }
+}
+
+.blog-post-content {
+  font-family: "Ubuntu", sans-serif;
+
+  img {
+    border: 2px solid black;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-transform: uppercase;
-    margin-bottom: 3rem;
-    margin-top: 1rem;
+  }
 
-
-    border-top: solid black;
-    border-bottom: solid black;
-
-    h5{
-        margin: 0.5rem 0;
+  blockquote {
+    border-left: 5px solid $extra;
+    padding: 1px 1px 1px 5px;
+    p {
+      margin: 0;
     }
+  }
+
+  hr {
+    border: 1px dashed lightgray;
+  }
+
+  table {
+    border-collapse: collapse;
+    border: 2px solid black;
+    width: 100%;
+    th {
+      border: 1px solid black;
+      background-color: $extra;
+      color: white;
+      font-weight: bold;
+    }
+    td {
+      border: 1px solid black;
+    }
+  }
+  strong {
+    font-weight: inherit;
+    color: white;
+    background-color: $color1;
+    padding-left: 2.5px;
+    padding-right: 2.5px;
+  }
 }
 
-.blog-post-content{
-    font-family: 'Ubuntu', sans-serif;
-
-    img{
-        border:  2px solid black;
-        width: 100%;
-    }
-
-
-    blockquote{
-        border-left: 5px solid $extra;
-        padding: 1px 1px 1px 5px;
-        p{
-            margin: 0;
-        }
-    }
-
-
-    hr{
-        border: 1px dashed lightgray;
-    }
-
-    table{
-        border-collapse: collapse;
-        border: 2px solid black;
-        width: 100%;
-        th{
-            border: 1px solid black;
-            background-color: $extra;
-            color: white;
-            font-weight: bold;
-        }
-        td{
-            border: 1px solid black;
-        }
-    }
-    strong{
-        font-weight: inherit;
-        color: white;
-        background-color: $color1;
-        padding-left: 2.5px;
-        padding-right: 2.5px;        
-    }
-}
-
-
-
-
-
-
-.go-back-wrapper{
-    // margin: 0 0 3rem 0;
-    // height: 100%;
-    text-transform: capitalize;
+.go-back-wrapper {
+  // margin: 0 0 3rem 0;
+  // height: 100%;
+  text-transform: capitalize;
 }
