--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -5,7 +5,7 @@
   height: 100px;
 
   background-color: transparent;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
   // margin-top: 2rem;
