--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,6 +1,7 @@
-// @import url('https://fonts.googleapis.com/css?family=Raleway');
-// @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-// @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+// @import url("https://fonts.googleapis.com/css?family=Raleway");
+// @import url("https://fonts.googleapis.com/css?family=Open+Sans");
+// @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
+// @import url("https://fonts.googleapis.com/css?family=Karla|Muli|Nunito|Rubik|Varela+Round");
 @import "../globalvars.scss";
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Ubuntu");
 
@@ -39,11 +40,11 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  // font-family:  'Raleway', sans-serif;
-  // font-family: 'Open Sans', sans-serif;
+  // font-family: "Raleway", sans-serif;
+  // font-family: "Open Sans", sans-serif;
   // font-family: 'Roboto Condensed', sans-serif;
 
-  // font-family: 'Roboto Condensed', sans-serif;
+  // font-family: "Roboto Condensed", monospace;
   // font-family: 'Source Sans Pro', sans-serif;
   // font-family: 'Ubuntu', sans-serif;
   // font-family: 'Josefin Sans', sans-serif;
@@ -53,6 +54,12 @@ body,
   // font-family: 'Rubik', sans-serif;
 
   // font-family:  'Lucida Sans Unicode', 'Lucida Grande', sans-serif
+
+  // font-family: "Nunito", monospace;
+  // font-family: "Muli", monospace;
+  // font-family: "Rubik", monospace;
+  // font-family: "Karla", monospace;
+  // font-family: "Varela Round", monospace;
 }
 * {
   box-sizing: border-box;
@@ -107,7 +114,9 @@ body,
 
 .background,
 body {
-  background-color: whitesmoke;
+  background-color: ivory;
+  // background-color: honeydew;
+  // background-color: whitesmoke;
   position: absolute;
   z-index: -2;
   width: 100%;
@@ -118,11 +127,23 @@ body {
   background-color: $color1;
   position: absolute;
   width: 100%;
-  height: 250px;
+  // height: 250px;
   z-index: -1;
-  background-color: grey;
+  background-color: turquoise;
 
-  // @include pluses();
+  -moz-transform: skew(0deg, 1.5deg);
+  /* -webkit-transform: skew(0deg, -15deg); */
+  -o-transform: skew(0deg, 1.5deg);
+  -ms-transform: skew(0deg, 1.5deg);
+  transform: skew(0deg, 1.5deg);
+  /* -webkit-box-shadow: inset 0px 0px 16px 0px rgba(0,0,0,0.75); */
+  -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.38);
+  /* box-shadow: inset 0px 0px 16px 0px rgba(0,0,0,0.75); */
+  margin-top: 25px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.38);
+  height: 165px;
+  // @include arrows();
+  // @include pluses();;
 }
 
 .children-wrapper {
@@ -147,11 +168,12 @@ body {
     h1 {
       margin: 0px;
       text-transform: capitalize;
-      color: white;
+      // color: white;
+      color: darkslategray;
     }
   }
   .links-grid {
-    grid-column: 5 / 10;
+    grid-column: 5 / 9;
     grid-row: 1;
   }
   .information-grid {
@@ -164,12 +186,13 @@ body {
     h1 {
       margin: 0px;
       text-transform: capitalize;
-      color: white;
+      // color: white;
+      color: darkslategray;
     }
   }
   .content-grid {
     grid-column: 1 / 9;
-    grid-row: 3 / 10;
+    grid-row: 2 / 10;
   }
   // .six {
   //   grid-column: 3;
@@ -177,18 +200,28 @@ body {
   // }
   .example {
     border-radius: 5px;
-    background-color: whitesmoke;
-    padding: 2rem;
+    // background-color: whitesmoke;
+    padding: 1rem 2rem 2rem 2rem;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.38);
+    background-color: whitesmoke;
+    opacity: 0.9;
   }
   .example-2 {
     padding: 1em;
-    border: 2px white dashed;
-    color: white;
+    // border: 2px white dashed;
+    border: 2px darkslategray dashed;
+
+    // color: white;
+    color: darkslategray;
+    transform: skew(0deg, -1.5deg);
+    background-color: whitesmoke;
+    opacity: 0.9;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.38);
   }
   .example-3 {
     padding: 1em;
     // border: 2px white dashed;
-    color: white;
+    // color: white;
+    color: darkslategray;
   }
 }
