--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -5,11 +5,14 @@
   grid-auto-rows: minmax(100px, auto);
 
   .grid-index-page-card {
-    background-color: white;
+    // background-color: salmon;
+    border: 1.25px solid rgba(0, 0, 0, 0.38);
     width: 100%;
     height: 100%;
     padding: 1.5rem;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.38);
-    border-radius: 25px;
+    // box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.38);
+
+    // border-radius: 25px;
+    border-radius: 0px 10px 10px 10px;
   }
 }
