card to become the best

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -209,7 +209,7 @@ body {
   .example-2 {
     padding: 1em;
     // border: 2px white dashed;
-    border: 2px darkslategray dashed;
+    // border: 2px darkslategray dashed;
 
     // color: white;
     color: darkslategray;
