--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -2,17 +2,70 @@
   display: grid;
   grid-template-columns: repeat(3, calc(33.34% - 5px));
   grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
+  grid-auto-rows: minmax(75px, auto);
 
   .grid-index-page-card {
-    // background-color: salmon;
-    border: 1.25px solid rgba(0, 0, 0, 0.38);
-    width: 100%;
-    height: 100%;
-    padding: 1.5rem;
-    // box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.38);
+    // width: 100%;
+    // height: 100%;
+    // padding: 1rem;
 
-    // border-radius: 25px;
-    border-radius: 0px 10px 10px 10px;
+    // border-top: 3px solid #009688;
+    // background-image: -webkit-gradient(
+    //   linear,
+    //   0 0,
+    //   0 100%,
+    //   from(#009688),
+    //   to(transparent)
+    // );
+    // background-image: -webkit-linear-gradient(#009688, transparent);
+    // background-image: -moz-linear-gradient(#009688, transparent),
+    //   -moz-linear-gradient(#009688, transparent);
+    // background-image: -o-linear-gradient(#009688, transparent),
+    //   -o-linear-gradient(#009688, transparent);
+    // background-image: linear-gradient(#009688, transparent),
+    //   linear-gradient(#009688, transparent);
+    // -moz-background-size: 3px 100%;
+    // background-size: 3px 100%;
+    // background-position: 0 0, 100% 0;
+    // background-repeat: no-repeat;
+
+    // transition: 1s ease all;
+
+    // &:hover {
+    //   border-top: 3px solid #00ced1;
+    //   background-image: -webkit-gradient(
+    //     linear,
+    //     0 0,
+    //     0 100%,
+    //     from(#00ced1),
+    //     to(transparent)
+    //   );
+    //   background-image: -webkit-linear-gradient(#00ced1, transparent);
+    //   background-image: -moz-linear-gradient(#00ced1, transparent),
+    //     -moz-linear-gradient(#00ced1, transparent);
+    //   background-image: -o-linear-gradient(#00ced1, transparent),
+    //     -o-linear-gradient(#00ced1, transparent);
+    //   background-image: linear-gradient(#00ced1, transparent),
+    //     linear-gradient(#00ced1, transparent);
+    //   -moz-background-size: 3px 100%;
+    // }
+    background-color: rgba(64, 224, 208, 0.38);
+    color: darkslategray;
+    padding: 1rem;
+    transition: 0.5s all ease;
+    text-transform: capitalize;
+    border-radius: 5px;
+    // opacity: 0.5;
+    &:hover {
+      padding: 0.7rem;
+      background-color: rgba(64, 224, 208, 0.65);
+      font-weight: bold;
+      cursor: pointer;
+      color: black;
+      transform: scale(1.1);
+    }
   }
 }
+
+//009688
+//00ced1
