--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,242 +1,40 @@
-// @import url("https://fonts.googleapis.com/css?family=Raleway");
-// @import url("https://fonts.googleapis.com/css?family=Open+Sans");
-// @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
-// @import url("https://fonts.googleapis.com/css?family=Karla|Muli|Nunito|Rubik|Varela+Round");
 @import "../globalvars.scss";
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Ubuntu");
 
-// $color1: #E1331B;
-// $color2: #F85E28;
-// $color3: #CCFCEE;
-// $color4: #7BD1B8;
-// $color5: #3E6C61;
-
-// $color1: #234A56;
-// $color2: #417D95;
-// $color3: #89B9C5;
-// $color4: #C1DEE2;
-// $color5: #DDE7DC;
-// $extra: #F34C56;
-
-// $color1: #031634;
-// $color2: #417D95;
-// $color3: #033649;
-// $color4: #036564;
-// $color5: #DDE7DC;
-// $extra: #036564;
-
-// $color1: #27ae60;
-// $color2: #417D95;
-// $color3: #eff0f1;
-// $color4: #fcfbfc;
-// $color5: #e9f0f4;
-// $extra: #036564;
-
 html,
-body,
-#___gatsby {
-  min-height: 100vh;
+body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  // font-family: "Raleway", sans-serif;
-  // font-family: "Open Sans", sans-serif;
-  // font-family: 'Roboto Condensed', sans-serif;
-
-  // font-family: "Roboto Condensed", monospace;
-  // font-family: 'Source Sans Pro', sans-serif;
-  // font-family: 'Ubuntu', sans-serif;
-  // font-family: 'Josefin Sans', sans-serif;
-  font-family: "Josefin Sans", monospace;
-  // font-family: 'Dosis', sans-serif;
-  // font-family: 'Arvo', serif;
-  // font-family: 'Rubik', sans-serif;
-
-  // font-family:  'Lucida Sans Unicode', 'Lucida Grande', sans-serif
-
-  // font-family: "Nunito", monospace;
-  // font-family: "Muli", monospace;
-  // font-family: "Rubik", monospace;
-  // font-family: "Karla", monospace;
-  // font-family: "Varela Round", monospace;
-}
-* {
-  box-sizing: border-box;
-  color: black;
+  background-color: whitesmoke;
 }
 
-// @mixin arrows($up, $down) {
-//   background: linear-gradient(45deg, $down 22.5px, transparent 22.5px) 32px 32px,
-//     linear-gradient(
-//       45deg,
-//       $down 22.5px,
-//       transparent 22.5px,
-//       transparent 45.5px,
-//       $up 45.5px,
-//       $up 67.5px,
-//       transparent 67.5px
-//     ),
-//     linear-gradient(
-//       -45deg,
-//       $down 11.5px,
-//       transparent 11.5px,
-//       transparent 34px,
-//       $down 34px,
-//       $down 56.5px,
-//       transparent 56.5px,
-//       transparent 79px,
-//       $down 79px
-//     );
-//   background-color: $up;
-//   background-size: 64px 64px;
-// }
 
-@mixin pluses() {
-  -moz-box-shadow: 0 6px 11px -4px rgba(0, 0, 0, 0.38) inset,
-    0 -6px 11px -4px rgba(0, 0, 0, 0.38) inset;
-  -webkit-box-shadow: 0 6px 11px -4px rgba(0, 0, 0, 0.38) inset,
-    0 -6px 11px -4px rgba(0, 0, 0, 0.38) inset;
-  box-shadow: 0 6px 11px -4px rgba(0, 0, 0, 0.38) inset,
-    0 -6px 11px -4px rgba(0, 0, 0, 0.38) inset;
-}
 
-// .children-card {
-//   background-color: white;
-//   width: 100%;
-//   max-width: 1000px;
-//   height: 100%;
-//   z-index: 0;
-//   padding: 1.5rem;
-//   box-shadow: 0px 0px 10px 0px hsla(0, 0%, 0%, 0.38);
-//   border-radius: 25px;
-// }
-
-.background,
-body {
-  background-color: ivory;
-  // background-color: honeydew;
-  // background-color: whitesmoke;
-  position: absolute;
-  z-index: -2;
+#___gatsby {
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
-.background-top {
-  background-color: $color1;
-  position: absolute;
-  width: 100%;
-  // height: 250px;
-  z-index: -1;
-  background-color: turquoise;
+.main-grid {
 
-  -moz-transform: skew(0deg, 1.5deg);
-  /* -webkit-transform: skew(0deg, -15deg); */
-  -o-transform: skew(0deg, 1.5deg);
-  -ms-transform: skew(0deg, 1.5deg);
-  transform: skew(0deg, 1.5deg);
-  /* -webkit-box-shadow: inset 0px 0px 16px 0px rgba(0,0,0,0.75); */
-  -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.38);
-  /* box-shadow: inset 0px 0px 16px 0px rgba(0,0,0,0.75); */
-  margin-top: 25px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.38);
-  height: 165px;
-  // @include arrows();
-  // @include pluses();;
+  padding-top: 20px;
+  @include grid(12)
+  
 }
-
-.children-wrapper {
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  // display: flex;
-  // align-items: flex-start;
-  // flex-direction: column;
-  padding: 2rem;
-
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(60px, auto);
-
-  .page-title-grid {
-    grid-column: 1 / 5;
-    grid-row: 1;
-    display: flex;
-    align-items: center;
-    h1 {
-      margin: 0px;
-      text-transform: capitalize;
-      // color: white;
-      color: darkslategray;
-    }
-  }
-  .links-grid {
-    grid-column: 5 / 9;
-    grid-row: 1;
-  }
-  .information-grid {
-    grid-column: 10 / 13;
-    grid-row: 1 / 5;
-    padding: 1em;
-    color: darkslategray;
-    transform: skew(0deg, -1.5deg);
-    background-color: whitesmoke;
-    opacity: 0.9;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.38);
-  }
-  .title-grid {
-    grid-column: 1 / 10;
-    grid-row: 2;
-    h1 {
-      margin: 0px;
-      text-transform: capitalize;
-      // color: white;
-      color: darkslategray;
-    }
-  }
-  .content-grid {
-    grid-column: 1 / 9;
-    grid-row: 2 / 10;
-  }
-  .example {
-    border-radius: 5px;
-    // background-color: whitesmoke;
-    padding: 1rem 2rem 2rem 2rem;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.38);
-    background-color: whitesmoke;
-    opacity: 0.9;
-  }
-  // .example-2 {
-  //   padding: 1em;
-  //   // border: 2px white dashed;
-  //   // border: 2px darkslategray dashed;
-
-  //   // color: white;
-  //   color: darkslategray;
-  //   transform: skew(0deg, -1.5deg);
-  //   background-color: whitesmoke;
-  //   opacity: 0.9;
-  //   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.38);
-  // }
-  .example-3 {
-    padding: 1em;
-    // border: 2px white dashed;
-    // color: white;
-    color: darkslategray;
-  }
-
-  @media screen and (max-width: 600px) {
-    // background-color: rebeccapurple;
-    .information-grid {
-      display: none;
-    }
-    .links-grid {
-      grid-column: 5 / 13;
-    }
-    .content-grid {
-      grid-column: 1 / 13;
-    }
-  }
+.box {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  border-radius: 10px;
+  margin: 10px;
+  opacity: 0.5;
+  box-shadow:  0px 0px 10px black;
 }
