--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,8 +1,11 @@
 @import "../globalvars.scss";
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Ubuntu");
+@import url('https://fonts.googleapis.com/css?family=Cabin:400,700');
+
 
 html,
-body {
+body,
+#___gatsby ,
+.helmet-wrapper {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -10,48 +13,6 @@ body {
   background-color: whitesmoke;
 }
 
-
-
-#___gatsby {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-}
-
-.main-grid {
-
-  padding-top: 20px;
-
-
-  @include for-phone-only {
-    @include grid(6);
-	}
-	@include for-tablet-portrait-up {
-    @include grid(12);
-	}
-	@include for-tablet-landscape-up {
-    @include grid(18);
-	}
-	@include for-desktop-up {
-    @include grid(24);
-	}
-	@include for-big-desktop-up {
-    @include grid(30);
-	}
-
-  
-}
-.box {
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  border-radius: 10px;
-  margin: 10px;
-  opacity: 0.5;
-  box-shadow:  0px 0px 10px black;
+* {
+    font-family: 'Cabin', sans-serif;
 }
