--- a/src/globalvars.scss
+++ b/src/globalvars.scss
@@ -5,43 +5,45 @@ $color4: #fcfbfc;
 $color5: #e9f0f4;
 $extra: #036564;
 
+@mixin grid($n) {
+  // $n: 24;
+  $width: 95vw;
+  display: grid;
 
-@mixin grid( $n) {
-    // $n: 24;
-    $width: 95vw;
-    display: grid;
-  
-    grid-auto-rows: calc( #{$width} / #{$n});
-    grid-template-columns: repeat(
-      $n,
-        calc( #{$width} / #{$n})
-    );
+  grid-auto-rows: calc(#{$width} / #{$n});
+  grid-template-columns: repeat($n, calc(#{$width} / #{$n}));
 }
-
-
 
 @mixin for-phone-only {
-	@media (max-width: 599px) {
-		@content;
-	}
+  @media (max-width: 599px) {
+    @content;
+  }
 }
 @mixin for-tablet-portrait-up {
-	@media (min-width: 600px) {
-		@content;
-	}
+  @media (min-width: 600px) {
+    @content;
+  }
 }
 @mixin for-tablet-landscape-up {
-	@media (min-width: 900px) {
-		@content;
-	}
+  @media (min-width: 900px) {
+    @content;
+  }
 }
 @mixin for-desktop-up {
-	@media (min-width: 1200px) {
-		@content;
-	}
+  @media (min-width: 1200px) {
+    @content;
+  }
 }
 @mixin for-big-desktop-up {
-	@media (min-width: 1800px) {
-		@content;
-	}
+  @media (min-width: 1800px) {
+    @content;
+  }
+}
+
+@mixin demo-text() {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  text-transform: uppercase;
 }
