--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,77 +1,131 @@
-.grid-index-page {
-  display: grid;
-  grid-template-columns: repeat(3, calc(33.34% - 5px));
-  grid-gap: 10px;
-  grid-auto-rows: minmax(75px, auto);
+@import "../globalvars.scss";
 
-  .grid-index-page-card {
-    // width: 100%;
-    // height: 100%;
-    // padding: 1rem;
+.index-title {
+  background-color: #8a89f5;
+  @include demo-text();
 
-    // border-top: 3px solid #009688;
-    // background-image: -webkit-gradient(
-    //   linear,
-    //   0 0,
-    //   0 100%,
-    //   from(#009688),
-    //   to(transparent)
-    // );
-    // background-image: -webkit-linear-gradient(#009688, transparent);
-    // background-image: -moz-linear-gradient(#009688, transparent),
-    //   -moz-linear-gradient(#009688, transparent);
-    // background-image: -o-linear-gradient(#009688, transparent),
-    //   -o-linear-gradient(#009688, transparent);
-    // background-image: linear-gradient(#009688, transparent),
-    //   linear-gradient(#009688, transparent);
-    // -moz-background-size: 3px 100%;
-    // background-size: 3px 100%;
-    // background-position: 0 0, 100% 0;
-    // background-repeat: no-repeat;
-
-    // transition: 1s ease all;
-
-    // &:hover {
-    //   border-top: 3px solid #00ced1;
-    //   background-image: -webkit-gradient(
-    //     linear,
-    //     0 0,
-    //     0 100%,
-    //     from(#00ced1),
-    //     to(transparent)
-    //   );
-    //   background-image: -webkit-linear-gradient(#00ced1, transparent);
-    //   background-image: -moz-linear-gradient(#00ced1, transparent),
-    //     -moz-linear-gradient(#00ced1, transparent);
-    //   background-image: -o-linear-gradient(#00ced1, transparent),
-    //     -o-linear-gradient(#00ced1, transparent);
-    //   background-image: linear-gradient(#00ced1, transparent),
-    //     linear-gradient(#00ced1, transparent);
-    //   -moz-background-size: 3px 100%;
-    // }
-    background-color: rgba(64, 224, 208, 0.38);
-    color: darkslategray;
-    padding: 1rem;
-    transition: 0.5s all ease;
-    text-transform: capitalize;
-    border-radius: 5px;
-    // opacity: 0.5;
-    &:hover {
-      padding: 0.7rem;
-      background-color: rgba(64, 224, 208, 0.65);
-      font-weight: bold;
-      cursor: pointer;
-      color: black;
-      transform: scale(1.1);
-    }
+  @include for-phone-only {
+    grid-column: 1/7;
+    grid-row: 1;
+  }
+  @include for-tablet-portrait-up {
+    grid-column: 1/9;
+    grid-row: 1/3;
+  }
+  @include for-tablet-landscape-up {
+    grid-column: 1/13;
+    grid-row: 1/3;
+  }
+  @include for-desktop-up {
+    grid-column: 1/9;
+    grid-row: 1/3;
+  }
+  @include for-big-desktop-up {
+    grid-column: 1/11;
+    grid-row: 1;
   }
 }
 
-@media screen and (max-width: 600px) {
-  .grid-index-page {
-    grid-template-columns: 100%;
+.index-art {
+  background-color: #59beef;
+  @include demo-text();
+
+  @include for-phone-only {
+    grid-column: 1/7;
+    grid-row: 2/8;
+  }
+  @include for-tablet-portrait-up {
+    grid-column: 9/13;
+    grid-row: 1/5;
+  }
+  @include for-tablet-landscape-up {
+    grid-column: 13/19;
+    grid-row: 1/7;
+  }
+  @include for-desktop-up {
+    grid-column: 19/25;
+    grid-row: 1/7;
+  }
+  @include for-big-desktop-up {
+    grid-column: 22/31;
+    grid-row: 1/9;
   }
 }
 
-//009688
-//00ced1
+.index-links {
+  background-color: #42f1e5;
+  @include demo-text();
+
+  @include for-phone-only {
+    grid-column: 1/7;
+    grid-row: 8/10;
+  }
+  @include for-tablet-portrait-up {
+    grid-column: 1/9;
+    grid-row: 3/5;
+  }
+  @include for-tablet-landscape-up {
+    grid-column: 13/19;
+    grid-row: 7/9;
+  }
+  @include for-desktop-up {
+    grid-column: 9/19;
+    grid-row: 1/3;
+  }
+  @include for-big-desktop-up {
+    grid-column: 11/22;
+    grid-row: 1;
+  }
+}
+
+.index-posts {
+  background-color: #a463e4;
+  @include demo-text();
+
+  @include for-phone-only {
+    grid-column: 1/7;
+    grid-row: 10/20;
+  }
+  @include for-tablet-portrait-up {
+    grid-column: 1/13;
+    grid-row: 5/15;
+  }
+  @include for-tablet-landscape-up {
+    grid-column: 1/13;
+    grid-row: 3/15;
+  }
+  @include for-desktop-up {
+    grid-column: 1/19;
+    grid-row: 3/15;
+  }
+  @include for-big-desktop-up {
+    grid-column: 1/22;
+    grid-row: 2/15;
+  }
+}
+
+.index-footer {
+  background-color: #647ce9;
+  @include demo-text();
+
+  @include for-phone-only {
+    grid-column: 1/7;
+    grid-row: 20;
+  }
+  @include for-tablet-portrait-up {
+    grid-column: 1/13;
+    grid-row: 15;
+  }
+  @include for-tablet-landscape-up {
+    grid-column: 13/19;
+    grid-row: 9;
+  }
+  @include for-desktop-up {
+    grid-column: 19/25;
+    grid-row: 8;
+  }
+  @include for-big-desktop-up {
+    grid-column: 22/31;
+    grid-row: 10;
+  }
+}
