--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,30 +1,47 @@
 @import "../globalvars.scss";
 
-.index-title {
-  background-color: #8a89f5;
-  @include demo-text();
+// .index-title {
+//   background-color: #8a89f533;
+//   border-radius: 10px;
 
-  @include for-phone-only {
-    grid-column: 1/7;
-    grid-row: 1;
-  }
-  @include for-tablet-portrait-up {
-    grid-column: 1/9;
-    grid-row: 1/3;
-  }
-  @include for-tablet-landscape-up {
-    grid-column: 1/13;
-    grid-row: 1/3;
-  }
-  @include for-desktop-up {
-    grid-column: 1/9;
-    grid-row: 1/3;
-  }
-  @include for-big-desktop-up {
-    grid-column: 1/11;
-    grid-row: 1;
-  }
-}
+//   // @include demo-text();
+
+//   font-weight: bold;
+//   text-transform: uppercase;
+//   margin: 10px;
+//   line-height: 100%;
+
+//   @include for-phone-only {
+//     grid-column: 1/7;
+//     grid-row: 1;
+//     font-size: 2em;
+//     @include flex-c-c();
+//   }
+//   @include for-tablet-portrait-up {
+//     grid-column: 1/9;
+//     grid-row: 1/3;
+//     font-size: 2em;
+//     @include flex-c-c();
+//   }
+//   @include for-tablet-landscape-up {
+//     grid-column: 1/13;
+//     grid-row: 1/3;
+//     font-size: 2.5em;
+//     @include flex-l-c();
+//   }
+//   @include for-desktop-up {
+//     grid-column: 1/9;
+//     grid-row: 1/3;
+//     font-size: 3em;
+//     @include flex-l-c();
+//   }
+//   @include for-big-desktop-up {
+//     grid-column: 1/11;
+//     grid-row: 1;
+//     font-size: 3em;
+//     @include flex-l-c();
+//   }
+// }
 
 .index-art {
   background-color: #59beef;
