--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -121,28 +121,28 @@
   }
 }
 
-.index-footer {
-  background-color: #647ce9;
-  @include demo-text();
+// .index-footer {
+//   background-color: #647ce9;
+//   @include demo-text();
 
-  @include for-phone-only {
-    grid-column: 1/7;
-    grid-row: 20;
-  }
-  @include for-tablet-portrait-up {
-    grid-column: 1/13;
-    grid-row: 15;
-  }
-  @include for-tablet-landscape-up {
-    grid-column: 13/19;
-    grid-row: 9;
-  }
-  @include for-desktop-up {
-    grid-column: 19/25;
-    grid-row: 8;
-  }
-  @include for-big-desktop-up {
-    grid-column: 22/31;
-    grid-row: 10;
-  }
-}
+//   @include for-phone-only {
+//     grid-column: 1/7;
+//     grid-row: 20;
+//   }
+//   @include for-tablet-portrait-up {
+//     grid-column: 1/13;
+//     grid-row: 15;
+//   }
+//   @include for-tablet-landscape-up {
+//     grid-column: 13/19;
+//     grid-row: 9;
+//   }
+//   @include for-desktop-up {
+//     grid-column: 19/25;
+//     grid-row: 8;
+//   }
+//   @include for-big-desktop-up {
+//     grid-column: 22/31;
+//     grid-row: 10;
+//   }
+// }
