--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -43,31 +43,31 @@
 //   }
 // }
 
-.index-art {
-  background-color: #59beef;
-  @include demo-text();
+// .index-art {
+//   background-color: #59beef;
+//   @include demo-text();
 
-  @include for-phone-only {
-    grid-column: 1/7;
-    grid-row: 2/8;
-  }
-  @include for-tablet-portrait-up {
-    grid-column: 9/13;
-    grid-row: 1/5;
-  }
-  @include for-tablet-landscape-up {
-    grid-column: 13/19;
-    grid-row: 1/7;
-  }
-  @include for-desktop-up {
-    grid-column: 19/25;
-    grid-row: 1/7;
-  }
-  @include for-big-desktop-up {
-    grid-column: 22/31;
-    grid-row: 1/9;
-  }
-}
+//   @include for-phone-only {
+//     grid-column: 1/7;
+//     grid-row: 2/8;
+//   }
+//   @include for-tablet-portrait-up {
+//     grid-column: 9/13;
+//     grid-row: 1/5;
+//   }
+//   @include for-tablet-landscape-up {
+//     grid-column: 13/19;
+//     grid-row: 1/7;
+//   }
+//   @include for-desktop-up {
+//     grid-column: 19/25;
+//     grid-row: 1/7;
+//   }
+//   @include for-big-desktop-up {
+//     grid-column: 22/31;
+//     grid-row: 1/9;
+//   }
+// }
 
 .index-links {
   background-color: #42f1e5;
