--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -69,57 +69,57 @@
 //   }
 // }
 
-.index-links {
-  background-color: #42f1e5;
-  @include demo-text();
+// .index-links {
+//   background-color: #42f1e5;
+//   @include demo-text();
 
-  @include for-phone-only {
-    grid-column: 1/7;
-    grid-row: 8/10;
-  }
-  @include for-tablet-portrait-up {
-    grid-column: 1/9;
-    grid-row: 3/5;
-  }
-  @include for-tablet-landscape-up {
-    grid-column: 13/19;
-    grid-row: 7/9;
-  }
-  @include for-desktop-up {
-    grid-column: 9/19;
-    grid-row: 1/3;
-  }
-  @include for-big-desktop-up {
-    grid-column: 11/22;
-    grid-row: 1;
-  }
-}
+//   @include for-phone-only {
+//     grid-column: 1/7;
+//     grid-row: 8/10;
+//   }
+//   @include for-tablet-portrait-up {
+//     grid-column: 1/9;
+//     grid-row: 3/5;
+//   }
+//   @include for-tablet-landscape-up {
+//     grid-column: 13/19;
+//     grid-row: 7/9;
+//   }
+//   @include for-desktop-up {
+//     grid-column: 9/19;
+//     grid-row: 1/3;
+//   }
+//   @include for-big-desktop-up {
+//     grid-column: 11/22;
+//     grid-row: 1;
+//   }
+// }
 
-.index-posts {
-  background-color: #a463e4;
-  @include demo-text();
+// .index-posts {
+//   background-color: #a463e4;
+//   @include demo-text();
 
-  @include for-phone-only {
-    grid-column: 1/7;
-    grid-row: 10/20;
-  }
-  @include for-tablet-portrait-up {
-    grid-column: 1/13;
-    grid-row: 5/15;
-  }
-  @include for-tablet-landscape-up {
-    grid-column: 1/13;
-    grid-row: 3/15;
-  }
-  @include for-desktop-up {
-    grid-column: 1/19;
-    grid-row: 3/15;
-  }
-  @include for-big-desktop-up {
-    grid-column: 1/22;
-    grid-row: 2/15;
-  }
-}
+//   @include for-phone-only {
+//     grid-column: 1/7;
+//     grid-row: 10/20;
+//   }
+//   @include for-tablet-portrait-up {
+//     grid-column: 1/13;
+//     grid-row: 5/15;
+//   }
+//   @include for-tablet-landscape-up {
+//     grid-column: 1/13;
+//     grid-row: 3/15;
+//   }
+//   @include for-desktop-up {
+//     grid-column: 1/19;
+//     grid-row: 3/15;
+//   }
+//   @include for-big-desktop-up {
+//     grid-column: 1/22;
+//     grid-row: 2/15;
+//   }
+// }
 
 // .index-footer {
 //   background-color: #647ce9;
