remove bgs and  improve links

--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -1,7 +1,7 @@
 @import "../../globalvars.scss";
 
 .index-footer {
-  background-color: #647ce933;
+  // background-color: #647ce933;
   // @include demo-text();
 
   margin: 10px;
