--- a/src/components/posts/index.scss
+++ b/src/components/posts/index.scss
@@ -1,7 +1,7 @@
 @import "../../globalvars.scss";
 
 .index-posts {
-  background-color: #a463e433;
+  // background-color: #a463e433;
   margin: 10px;
   border-radius: 10px;
 
