--- a/src/components/title/index.scss
+++ b/src/components/title/index.scss
@@ -1,7 +1,7 @@
 @import "../../globalvars.scss";
 
 .index-title {
-  background-color: #8a89f533;
+  // background-color: #8a89f533;
   border-radius: 10px;
 
   font-weight: bold;
