--- a/src/components/links/index.scss
+++ b/src/components/links/index.scss
@@ -1,13 +1,25 @@
 @import "../../globalvars.scss";
 
 .index-links {
-  background-color: #42f1e533;
+  // background-color: #42f1e533;
   // @include flex-c-c();
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   margin: 10px;
   border-radius: 10px;
+
+
+  > * {
+    color: black;
+    text-transform: capitalize;
+    border-bottom: 2px solid transparent;
+    padding: 5px;
+    &:hover{
+      border-bottom: 2px solid;
+    }
+  }
+  
 
   @include for-phone-only {
     grid-column: 1/7;
