--- a/src/components/links/index.scss
+++ b/src/components/links/index.scss
@@ -10,6 +10,8 @@
   border-radius: 10px;
 
   > * {
+    all: unset;
+    cursor: pointer;
     color: black;
     text-transform: capitalize;
     border-bottom: 2px solid transparent;
