--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,18 +1,13 @@
-@import "../globalvars.scss";
-@import url('https://fonts.googleapis.com/css?family=Cabin:400,700');
-
-
-html,
-body,
-#___gatsby ,
-.helmet-wrapper {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: whitesmoke;
+.markdown-body {
+  box-sizing: border-box;
+  min-width: 200px;
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 45px;
 }
 
-* {
-    font-family: 'Cabin', sans-serif;
+@media (max-width: 767px) {
+  .markdown-body {
+    padding: 15px;
+  }
 }
