--- a/src/templates/index.scss
+++ b/src/templates/index.scss
@@ -50,6 +50,9 @@ div {
 a {
 	//text-decoration: underline !important;
 	color: #0c9d9f !important;
+	&:hover {
+		color: #ff0089 !important;
+	}
 }
 hr {
 	background-color: #ffffff4a !important;
