--- a/layouts/homebanner.njk
+++ b/layouts/homebanner.njk
@@ -1,14 +1,16 @@
-<div class="banner">
-    <div class="bannerArt">
-        <div class="artWrapper"></div>
-    </div>
-    <div class="post">
-        <div class="postTitle">Extensive list of mental models</div>
-        <div class="description">loas  sdlkajdklaj dklajd kl ajdskl asdkl aksdj klasajdkdj kjkajdjdkjskdasj ksjajdjdkljdjkasj lkadajdj d sd asjdkas dkl ask</div>
-        <div class="subInfo">
-            <div class="info">12/23/2002</div>
-            <div class="divider"></div>
-            <div class="info">some nice title</div>
+<a class="bannerLink" href="/linkToPost.html">
+    <div class="banner">
+        <div class="bannerArt">
+            <div class="artWrapper"></div>
+        </div>
+        <div class="post">
+            <div class="postTitle">Extensive list of mental models</div>
+            <div class="description">loas  sdlkajdklaj dklajd kl ajdskl asdkl aksdj klasajdkdj kjkajdjdkjskdasj ksjajdjdkljdjkasj lkadajdj d sd asjdkas dkl ask</div>
+            <div class="subInfo">
+                <div class="info">06/12/2002</div>
+                <div class="divider"></div>
+                <div class="info">12 minute read</div>
+            </div>
         </div>
     </div>
-</div>
+</a>
