--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,7 @@
 @import 'fonts.scss';
 @import 'header.scss';
 @import 'banner.scss';
+@import 'postLink.scss';
 
 body{
     font-family: 'Ubuntu', sans-serif;
