--- a/layouts/home.njk
+++ b/layouts/home.njk
@@ -1,35 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="s.css">
   </head>
   <body>
     {% include "header.njk" %}
     {% include "homebanner.njk" %}
-
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
-    <h1>This i asd asds {{name}}</h1>
-    <p>This is a {{age}}.</p>
+    {% include "postLinks.njk" %}
   </body>
 </html>
