--- a/src/common/header/header.njk
+++ b/src/common/header/header.njk
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="headerHome">Kevin Oliveira</div>
     <div class="headerLinks">
-    	<a onclick="toogleCurrentTheme()">Dark side</a>
+    	<a onclick="toogleCurrentTheme()">Change Theme</a>
         {% for item in plinks %}
             <a href="{{item.link}}">{{item.label}}</a>
         {% endfor %}
